# brainheck

./: .gitignore  LICENSE  Makefile  README.md  brainheck.cabal  cabal.project.local  default.nix  haskell-ci.dhall  hlint-ci.dhall  stack.yaml
.github/workflows/: haskell.yml  hlint.yml
app/: Main.hs
bench/: Bench.hs
bf/: quine.bf  rickroll.bf
src/: Brainheck.hs
src/Brainheck/Exec/: Opt.hs
