name:                brainheck
version:             0.1.0.6
synopsis:            Brainh*ck interpreter in haskell
description:         Brainh*ck interpreter written in haskell and taking advantage of many prominent libraries
homepage:            https://github.com/vmchale/brainheck#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          tmchale@wisc.edu
copyright:           Copyright: (c) 2016-2017 Vanessa McHale
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , bf/helloworld.bf
cabal-version:       1.18

Flag llvm-fast {
  Description: Enable build with llvm backend
  Default: False
}

flag development
    description:
        Turn on '-Werror'
    default: False
    manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Brainheck
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , vector
                     , recursion-schemes
                     , text
                     , lens
                     , megaparsec >= 6.0
                     , containers
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , TypeFamilies
  ghc-options: -Wall
  if flag(development)
      ghc-options: -Werror
  
  if impl(ghc >=8.0)
      ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates

executable brainheck
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_brainheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brainheck
                     , optparse-applicative
                     , text
  default-language:    Haskell2010
  ghc-options: -Wall
  if flag(development)
      ghc-options: -Werror
  
  if impl(ghc >=8.0)
      ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates

benchmark brainheck-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Bench.hs
  build-depends:    base
                  , criterion
                  , brainheck
                  , text
  if flag(llvm-fast)
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N -fllvm -optlo-O3 -O3
  else
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N -O3
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(development)
      ghc-options: -Werror
  
  if impl(ghc >=8.0)
      ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates

source-repository head
  type:     git
  location: https://github.com/vmchale/brainheck
